[gd_scene load_steps=12 format=2]

[ext_resource path="res://TileMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Square.png" type="Texture" id=4]
[ext_resource path="res://Scripts/TutorialGreenSquare.gd" type="Script" id=5]
[ext_resource path="res://Scripts/TutorialDoor.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Blocker.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 64, 16 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 32 )

[sub_resource type="CircleShape2D" id=4]

[node name="Main" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )

[node name="GameObjects" type="Node2D" parent="."]
pause_mode = 1

[node name="Player" parent="GameObjects" groups=[
"Player",
] instance=ExtResource( 3 )]

[node name="TutorialGreenSquare" type="StaticBody2D" parent="GameObjects"]
position = Vector2( -96, 664 )
collision_layer = 513
collision_mask = 513
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameObjects/TutorialGreenSquare"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="GameObjects/TutorialGreenSquare"]
modulate = Color( 0.301961, 0.807843, 0.0941176, 1 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="TutorialDoor" type="StaticBody2D" parent="GameObjects"]
position = Vector2( 0, 944 )
collision_layer = 513
collision_mask = 513
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameObjects/TutorialDoor"]
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="GameObjects/TutorialDoor"]
modulate = Color( 0.0941176, 0.341176, 0.807843, 1 )
scale = Vector2( 4, 1 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Blocker" type="KinematicBody2D" parent="GameObjects"]
position = Vector2( 728, 1136 )
collision_layer = 513
collision_mask = 513
script = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameObjects/Blocker"]
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="GameObjects/Blocker"]
modulate = Color( 0.807843, 0.0941176, 0.0941176, 1 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="TileMap" parent="." instance=ExtResource( 1 )]
modulate = Color( 0, 0, 0, 1 )
tile_data = PoolIntArray( -262157, 0, 0, -262156, 0, 0, -262155, 0, 0, -262154, 0, 0, -262153, 0, 0, -262152, 0, 0, -262151, 0, 0, -262150, 0, 0, -262149, 0, 0, -262148, 0, 0, -262147, 0, 0, -262146, 0, 0, -262145, 0, 0, -327680, 0, 0, -327679, 0, 0, -327678, 0, 0, -327677, 0, 0, -327676, 0, 0, -327675, 0, 0, -327674, 0, 0, -327673, 0, 0, -327672, 0, 0, -327671, 0, 0, -327670, 0, 0, -327669, 0, 0, -327668, 0, 0, -196621, 0, 0, -262132, 0, 0, -131085, 0, 0, -196596, 0, 0, -65549, 0, 0, -131060, 0, 0, -13, 0, 0, -65524, 0, 0, 65523, 0, 0, 12, 0, 0, 131059, 0, 0, 65548, 0, 0, 196595, 0, 0, 131084, 0, 0, 262131, 0, 0, 196620, 0, 0, 327667, 0, 0, 262156, 0, 0, 393203, 0, 0, 327692, 0, 0, 458739, 0, 0, 393228, 0, 0, 524275, 0, 0, 458764, 0, 0, 589811, 0, 0, 524300, 0, 0, 655347, 0, 0, 589836, 0, 0, 720883, 0, 0, 655372, 0, 0, 786419, 0, 0, 720908, 0, 0, 851955, 0, 0, 786444, 0, 0, 917491, 0, 0, 851980, 0, 0, 983027, 0, 0, 917516, 0, 0, 1048563, 0, 0, 983052, 0, 0, 1114099, 0, 0, 1048588, 0, 0, 1179635, 0, 0, 1114124, 0, 0, 1245171, 0, 0, 1179660, 0, 0, 1310707, 0, 0, 1245196, 0, 0, 1376243, 0, 0, 1310732, 0, 0, 1441779, 0, 0, 1376268, 0, 0, 1507315, 0, 0, 1441804, 0, 0, 1572851, 0, 0, 1507340, 0, 0, 1638387, 0, 0, 1572876, 0, 0, 1703923, 0, 0, 1638412, 0, 0, 1769459, 0, 0, 1703948, 0, 0, 1834995, 0, 0, 1769484, 0, 0, 1900531, 0, 0, 1835020, 0, 0, 1966067, 0, 0, 1966068, 0, 0, 1966069, 0, 0, 1966070, 0, 0, 1966071, 0, 0, 1966072, 0, 0, 1966073, 0, 0, 1966074, 0, 0, 1966075, 0, 0, 1966076, 0, 0, 1966077, 0, 0, 1900546, 0, 0, 1900547, 0, 0, 1900548, 0, 0, 1900549, 0, 0, 1900550, 0, 0, 1900551, 0, 0, 1900552, 0, 0, 1900553, 0, 0, 1900554, 0, 0, 1900555, 0, 0, 1900556, 0, 0, 1900557, 0, 0, 1900558, 0, 0, 1900559, 0, 0, 1900560, 0, 0, 1900561, 0, 0, 1900562, 0, 0, 1900563, 0, 0, 1900564, 0, 0, 1900565, 0, 0, 1900566, 0, 0, 1900567, 0, 0, 1900568, 0, 0, 1900569, 0, 0, 1900570, 0, 0, 1900571, 0, 0, 1900572, 0, 0, 1900573, 0, 0, 1900574, 0, 0, 1900575, 0, 0, 2031603, 0, 0, 2097139, 0, 0, 2162675, 0, 0, 2228211, 0, 0, 2293747, 0, 0, 2359283, 0, 0, 2424819, 0, 0, 2490355, 0, 0, 2555891, 0, 0, 2621427, 0, 0, 2686963, 0, 0, 2686964, 0, 0, 2686965, 0, 0, 2686966, 0, 0, 2686967, 0, 0, 2686968, 0, 0, 2686969, 0, 0, 2686970, 0, 0, 2686971, 0, 0, 2686972, 0, 0, 2686973, 0, 0, 2686974, 0, 0, 2686975, 0, 0, 2621440, 0, 0, 2621441, 0, 0, 2621442, 0, 0, 2621443, 0, 0, 2621444, 0, 0, 2621445, 0, 0, 2621446, 0, 0, 2621447, 0, 0, 2621448, 0, 0, 2621449, 0, 0, 2621450, 0, 0, 2621451, 0, 0, 2621452, 0, 0, 2621453, 0, 0, 2621454, 0, 0, 2621455, 0, 0, 2621456, 0, 0, 2621457, 0, 0, 2621458, 0, 0, 2621459, 0, 0, 2621460, 0, 0, 2621461, 0, 0, 2621462, 0, 0, 2621463, 0, 0, 2621464, 0, 0, 2621465, 0, 0, 2621466, 0, 0, 2621467, 0, 0, 2621468, 0, 0, 2621469, 0, 0, 2621470, 0, 0, 2621471, 0, 0 )

[node name="Labels" type="Node2D" parent="TileMap"]
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="TileMap/Labels"]
margin_left = -344.0
margin_top = -96.0
margin_right = -56.0
margin_bottom = -31.0
text = "Welcome to \"Sole Override\"!
You are playing as this charming blue square.

Use the arrow keys to move around."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="TileMap/Labels"]
margin_left = -368.0
margin_top = 128.0
margin_right = 52.0
margin_bottom = 193.0
text = "You are currently infiltrating the secret base of a super evil villain."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="TileMap/Labels"]
margin_left = -368.0
margin_top = 320.0
margin_right = -16.0
margin_bottom = 385.0
text = "And you are a super spy square with the ability
to hack the source code of your reality."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="TileMap/Labels"]
margin_left = -376.0
margin_top = 456.0
margin_right = 152.0
margin_bottom = 555.0
text = "Right click on any object that runs a script to see and change it.
(Objects with scripts have a color other than black.)

BUT!
You can only change one thing in any script and only one script at a time.
If you modify a new script, the last edited script will be reset to it's previous state.

Try it with this lovely green square."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="TileMap/Labels"]
margin_left = -376.0
margin_top = 768.0
margin_right = -24.0
margin_bottom = 901.0
text = "And behind this door the tutorial ends.
Try to figure out how to get to the secret vault.

Good luck and have fun!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScriptScan" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 512
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScriptScan"]
shape = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -487.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CodeEdit" type="TextEdit" parent="UI/Control"]
margin_left = 22.0
margin_top = 15.0
margin_right = 532.0
margin_bottom = 520.0
syntax_highlighting = true
show_line_numbers = true
draw_tabs = true
highlight_all_occurrences = true

[node name="ApplyButton" type="Button" parent="UI/Control"]
margin_left = 64.0
margin_top = 544.0
margin_right = 164.0
margin_bottom = 574.0
text = "Apply"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelButton" type="Button" parent="UI/Control"]
margin_left = 392.0
margin_top = 544.0
margin_right = 492.0
margin_bottom = 574.0
text = "Cancel"

[node name="WarnLabel" type="Label" parent="UI/Control"]
visible = false
margin_left = 184.0
margin_top = 528.0
margin_right = 369.0
margin_bottom = 593.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "You can only make 1 change.
So either change 1 character,
remove 1 character
or add 1 character."
[connection signal="pressed" from="UI/Control/ApplyButton" to="." method="_on_ApplyButton_pressed"]
[connection signal="pressed" from="UI/Control/CancelButton" to="." method="_on_CancelButton_pressed"]
